--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
     <div class="link-boxes">
       <ul class="box">
         <li class="link_name">Company</li>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Contact us</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Get started</a></li>
+        <li><a href="aboutus.html">About us</a></li>
+        <li><a href="index.html">Get started</a></li>
       </ul>
       <ul class="box">
         <li class="link_name">Services</li>
@@ -520,8 +520,8 @@
     <div class="bottom_text">
       <span class="copyright_text">Copyright © 2022 <a href="#" style="color: rgb(243, 35, 8);">StudLence</a>All rights reserved</span>
       <span class="policy_terms">
-        <a href="#">Privacy policy</a>
-        <a href="#">Terms & condition</a>
+        <a href="privacy.html">Privacy policy</a>
+        <a href="terms_condition.html">Terms & condition</a>
       </span>
     </div>
   </div>
