--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <!--Navbar Starts-->
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="assets/STUDLENCE__10_-removebg-preview.png" alt=""><span class="s1">STUD</span><span class="s2">LENCE</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,12 +31,20 @@
             </ul>
           </li>
         </ul>
-        
         <form class="d-flex" role="search">
           <input class="form-control form1 me-2" type="search" placeholder="Search Training..." aria-label="Search">
-          <button class="btn btn2 btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
+          <button class="btn btn2 btn-outline-success me-5" type="submit"><i class="fas fa-search"></i></button>
         </form>
-         <a href="https://rajanukul.github.io/Login-Signup-Form/"><button class="btn login btn-outline-success" type="submit">Register</button></a>
+         <a href="https://rajanukul.github.io/Login-Signup-Form/"><button class="btn login btn-outline-success me-5" type="submit">Register</button></a>
+         <!--<button onclick="myFunction()">Toggle dark mode</button>-->
+         <div class="darkmode">
+          <input type="checkbox" class="checkbox" id="chk" />
+          <label class="label me-2" for="chk">
+            <i class="fas fa-sun"></i>
+            <i class="fas fa-moon"></i>
+            <div class="ball"></div>
+          </label>
+        </div>
       </div>
     </div>
   </nav>
@@ -527,7 +535,13 @@
   </div>
 </footer>
 
+<script>
+  const chk = document.getElementById('chk');
 
+chk.addEventListener('change', () => {
+	document.body.classList.toggle('dark');
+});
+  </script>
   <script src="script.js"></script>
   </body>
 </html>
