--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     </section>
 <!--Slider Ends-->
 
+
+
+<section class="section">
+  <h1><span class="change_content"> </span> <span style="margin-top: -10px;"> | </span> </h1>
+</section>
 <!--Timeline starts-->
 <div class="container">
   <h1>Internship Program</h1>
