--- a/terms_condition.html
+++ b/terms_condition.html
@@ -213,7 +213,7 @@
     <hr>
     <div class="bottom-details">
       <div class="bottom_text">
-        <span class="copyright_text">Copyright © 2022 <a href="#" style="color: rgb(243, 35, 8);">StudLence</a>All rights reserved</span>
+        <span class="copyright_text">Copyright © 2022 <a href="index.html">StudLence</a>All rights reserved</span>
         <span class="policy_terms">
           <a href="privacy.html">Privacy policy</a>
           <a href="terms_condition.html">Terms & condition</a>
