--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
       <ul class="box">
         <li class="link_name">Company</li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="contact.html">Contact us</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="index.html">Get started</a></li>
       </ul>
