--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!--Slider Starts-->
     
     <section class="home">
-      <video class="video-slide active" src="assets/cartoon animation1.mp4" autoplay muted loop></video>
+      <video class="video-slide active" src="assets/3.mp4" autoplay muted loop></video>
       <video class="video-slide" src="assets/2.mp4" autoplay muted loop></video>
       <video class="video-slide" src="assets/1.mp4" autoplay muted loop></video>
       <video class="video-slide" src="" autoplay muted loop></video>
